# portfolio

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  codeql.yml  dependency-review.yml  pre-commit.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: a3f9c2e1d7b8_add_image_url_to_projects.py  c14af86c06ab_create_projects_and_skills.py  e7f3a2c1b4d5_convert_status_and_level_to_enums.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  database.py  enums.py  limiter.py  logging.py  middleware.py
backend/app/models/: __init__.py  project.py  skill.py
backend/app/routes/: contact.py  project.py  skill.py
backend/app/schemas/: __init__.py  contact.py  project.py  skill.py
backend/app/services/: storage.py
backend/tests/: conftest.py  test_contact.py  test_health.py  test_projects.py  test_skills.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  manifest.ts  robots.ts  sitemap.ts
frontend/components/: contact-form.test.tsx  contact-form.tsx  hero.tsx  navbar.tsx  project-card.tsx  projects-section.tsx  tech-section.tsx
frontend/lib/: api.ts  constants.ts  contact-schema.test.ts  utils.ts  (+3 more)
(+15 files in other folders)
